<resources>
    <string name="app_name">NIT Silchar Alumni</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">884032345105170</string>
    <string name="fb_login_protocol_scheme">fb884032345105170</string>

    <string-array name="typeOfUser">
        <item>Alumni</item>
        <item>Student</item>
        <item>Faculty</item>
    </string-array>
    <string-array name="classOf">
        <item>Select</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_out">Sign out</string>
    <string name="alumni">Alumni</string>
    <string name="jobs">Jobs</string>
    <string name="bookmark">Bookmark</string>
    <string name="signupFragment">SignupFragment</string>
    <string name="alumniOrStudentSignupFrag">AlumniOrStudentSignUpFragment</string>
    <string name="placeAutoCompleteFragment">PlaceAutoCompleteFragment</string>
    <string name="search_feed">Search Feed</string>
    <string name="search_alumni">Search Alumni</string>
    <string name="search_job">Search Job</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">close</string>
    <string name="create_feed">Create Feed</string>
    <string name="create_job_post">Create Job Post</string>
    <string name="edit_done">Edit done</string>
    <string name="edit">Edit</string>
    <string name="socialLoginFragment">SocialLoginFragment</string>
    <string name="loginFragment">LoginFragment</string>
    <string name="failed_to_load_data">Failed to Load data</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="please_choose_class_of">Please choose class of</string>
    <string name="auth_failed">Authentication failed: You\'re probably signed up already</string>
    <string name="please_select_location">Please select location</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="please_complete_the_form">Please complete the form</string>
    <string name="please_enter_details_correctly">Please enter details correctly</string>
    <string name="type_a_name">Type a name...</string>
    <string name="failed_to_search">Failed to search</string>
    <string name="choose_a_graduation_year">Choose a graduation year</string>
    <string name="upload_failed">Upload failed</string>
    <string name="please_select_a_image_to_upload">Please select a image to upload</string>
    <string name="profile">Profile</string>
    <string name="rate_us">Rate us</string>
    <string name="contact_us">Contact us</string>
    <string name="logout">Logout</string>
    <string name="developed_by">Developed by Akash</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="brief_description_about_post">Please enter brief description about the post</string>
    <string name="seach_keyword_warning">Search keywords should be alphanumeric and separated by comma</string>
    <string name="posting">Posting...</string>
    <string name="updated">Updated</string>
    <string name="internal_error">Internal error, please try after some time</string>
    <string name="image_selected">Image selected</string>
    <string name="refreshed">Refreshed</string>
    <string name="no_new_feed">No new feed</string>
    <string name="create_feed_fragment">CreateFeedFragment</string>
    <string name="seach">Search...</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="choose_a_company">Choose a company</string>
    <string name="no_new_jobs">No new jobs</string>
    <string name="create_job_fragment">CreateJobFragment</string>
    <string name="edit_my_profile_fragment">EditMyProfileFragment</string>
    <string name="my_profile_fragment">MyProfileFragment</string>
    <string name="filter_job">FilterJob</string>
    <string name="filter_alumni">FilterAlumni</string>
    <string name="alumni_details">AlumniDetails</string>
    <string name="job">Job</string>
    <string name="home">Home</string>
    <string name="menu_item">Menu Item</string>
    <string name="about_you">About you</string>
    <string name="class_of">Class of</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="organisation">Organisation</string>
    <string name="email">Email</string>
    <string name="skills">Skills</string>
    <string name="designation">Designation</string>
    <string name="current_company">Current company</string>
    <string name="create_account">Create Account</string>
    <string name="description">Description</string>
    <string name="a_brief_description_of_what_s_this_about">A brief description of what\'s this about</string>
    <string name="keywords">Keywords</string>
    <string name="enter_keywords_separated_by_comma">Enter keywords separated by comma</string>
    <string name="select_image">Select Image</string>
    <string name="post">Post</string>
    <string name="enter_job_title">Enter job title</string>
    <string name="enter_organisation_name">Enter organisation name</string>
    <string name="enter_job_location">Enter job location</string>
    <string name="tell_a_bit_about_this_job">Tell a bit about this job</string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="sign_up">Sign up!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="sign_in_with_social_networks">Sign in with social networks</string>
    <string name="nits_alumni">NITS Alumni</string>
    <string name="next">Next</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="re_type_password">Re-type password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="type_of_user">Type of user</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="job_description">Job description:</string>
    <string name="profile_icon">profile icon</string>
    <string name="feed_image">feed image</string>
    <string name="backgroundstyle">backgroundStyle</string>
    <string name="job_title">Job title</string>
    <string name="backgroundprofileimage">backgroundProfileImage</string>
    <string name="profile_image">profile image</string>
    <string name="close">close</string>
    <string name="alumni_profile_icon">alumni profile icon</string>
    <string name="name">Akash Gupta</string>
    <string name="profile_icon_job">profile icon job</string>
    <string name="name_job">Akash Raj</string>
    <string name="job_descriptions">job description</string>

    <string-array name="location">
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Bangalore</item>
        <item>Chennai</item>
        <item>Pune</item>
        <item>Hyderabad</item>
        <item>Guwahati</item>
    </string-array>

    <string-array name="alumniClassOf">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
    </string-array>

    <string-array name="organisation">
        <item>L n T</item>
        <item>Harman</item>
        <item>Samsung</item>
    </string-array>
</resources>
