<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.akash.android.nitsilcharalumni.ui.feed.CreateFeedFragment">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCreateFeed"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/myToolbarTheme"/>

        <TextView
            android:id="@+id/tvFeedDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarCreateFeed"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/description"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_feed_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tvFeedDescription"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_feed_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sharp_cornors"
                android:gravity="start"
                android:hint="@string/a_brief_description_of_what_s_this_about"
                android:inputType="textCapSentences|textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvFeedKeywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_feed_description"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/keywords"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_feed_keywords"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/tvFeedKeywords"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:gravity="start"
            android:padding="4dp"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_feed_keywords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/sharp_cornors"
                android:gravity="start"
                android:hint="@string/enter_keywords_separated_by_comma"
                android:inputType="text|textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSelectImage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_feed_keywords"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:text="@string/select_image"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:id="@+id/fabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/til_feed_keywords">

            <com.github.jorgecastilloprz.FABProgressCircle
                android:id="@+id/fabProgressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="4dp"
                android:layout_marginTop="8dp"
                android:padding="2dp"
                android:clipToPadding="false">

                <!--Google FAB-->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/uploadFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_backup_white_24dp"
                    app:borderWidth="0dp"
                    app:elevation="6dp" />

            </com.github.jorgecastilloprz.FABProgressCircle>
        </RelativeLayout>

        <Button
            android:id="@+id/btPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fabLayout"
            android:layout_marginTop="60dp"
            android:background="@color/colorPrimary"
            android:text="@string/post"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</ScrollView>