<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayoutEditMyProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayoutEditMyProfile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayoutEditMyProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title">

            <ImageView
                android:id="@+id/backdropEditProfileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="visible"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/backgroundprofileimage"/>

            <ImageView
                android:id="@+id/ivEditProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_add_a_photo_white_96dp"
                android:contentDescription="@string/profile_image"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cardimagegradient"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarEditMyProfile"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardElevation="8dp"
            app:contentPadding="4dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvAboutYouEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/about_you"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditAboutYouMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvAboutYouEditMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEditAboutYouMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Virat Kohli was born on 5 November 1988 in Delhi into a Punjabi family.[13] His father, Prem Kohli, worked as a criminal lawyer and his mother, Saroj Kohli, is a housewife.[14] He has an elder brother, Vikash, and an elder sister, Bhavna."
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvClassOfEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/class_of"
                    android:layout_below="@+id/tilEditAboutYouMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditClassOfMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditAboutYouMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEditClassOfMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2013"
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvLocationEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/location"
                    android:layout_below="@+id/tilEditClassOfMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditLocationMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditClassOfMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEditLocationMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Bangalore"
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvContactEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/contact"
                    android:layout_below="@+id/tilEditLocationMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditContactMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditLocationMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etContactMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="9004351967"
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvEmailEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/email"
                    android:visibility="gone"
                    android:layout_below="@+id/tilEditContactMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditEmailMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditContactMyProfile"
                    app:hintTextAppearance="@style/HintText"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etEmailMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="akash.nits@outlook.com"
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvOrganisationEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/organisation"
                    android:layout_below="@+id/tilEditEmailMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditOrganisationMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditEmailMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etOrganisationMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Google Inc."
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvDesignationEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/designation"
                    android:layout_below="@+id/tilEditOrganisationMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditDesignationMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditOrganisationMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etDesignationMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Senior Engineer"
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tvSkillsEditMyProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/skills"
                    android:layout_below="@+id/tilEditDesignationMyProfile"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEditSkillsMyProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="200dp"
                    android:layout_below="@+id/tilEditDesignationMyProfile"
                    app:hintTextAppearance="@style/HintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/etSkillsMyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Android, Java etc."
                        android:padding="8dp"
                        />
                </android.support.design.widget.TextInputLayout>

                <ProgressBar
                    android:id="@+id/pbEditMyProfileFragment"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>
            </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>